--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,280 @@
-ipython
-notebook
-nb_conda_kernels
-
-polars
-python-dotenv
-neo4j-python-driver
-
-langchain
-langchain-core
-langchain-community
-langchain-google-genai
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+abseil-cpp=20211102.0=h93e1e8c_3
+aiohttp=3.9.5=py310h2372a71_0
+aiosignal=1.3.1=pyhd8ed1ab_0
+altair=5.3.0=pyhd8ed1ab_0
+annotated-types=0.7.0=pyhd8ed1ab_0
+anyio=4.4.0=pyhd8ed1ab_0
+argon2-cffi=23.1.0=pyhd8ed1ab_0
+argon2-cffi-bindings=21.2.0=py310h2372a71_4
+arrow=1.3.0=pyhd8ed1ab_0
+arrow-cpp=8.0.0=py310h3098874_1
+asttokens=2.0.5=pyhd3eb1b0_0
+async-lru=2.0.4=pyhd8ed1ab_0
+async-timeout=4.0.3=pyhd8ed1ab_0
+attrs=23.2.0=pyh71513ae_0
+aws-c-common=0.6.8=h7f98852_0
+aws-c-event-stream=0.1.6=h6a678d5_6
+aws-checksums=0.1.11=ha492f5f_12
+aws-sdk-cpp=1.8.185=h721c034_1
+babel=2.14.0=pyhd8ed1ab_0
+beautifulsoup4=4.12.3=pyha770c72_0
+black=24.4.2=py310h06a4308_0
+bleach=6.1.0=pyhd8ed1ab_0
+blinker=1.8.2=pyhd8ed1ab_0
+boost-cpp=1.85.0=h44aadfe_1
+brotli-python=1.0.9=py310hd8f1fbe_7
+bzip2=1.0.8=h5eee18b_6
+c-ares=1.28.1=hd590300_0
+ca-certificates=2024.6.2=hbcca054_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+cachetools=5.3.3=pyhd8ed1ab_0
+cattrs=23.2.3=pyhd8ed1ab_0
+certifi=2024.6.2=pyhd8ed1ab_0
+cffi=1.16.0=py310h2fee648_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
+click=8.1.7=unix_pyh707e725_0
+colorama=0.4.6=pyhd8ed1ab_0
+comm=0.2.2=pyhd8ed1ab_0
+cryptography=42.0.8=py310hb1bd9d3_0
+dataclasses-json=0.6.7=pyhd8ed1ab_0
+debugpy=1.6.7=py310h6a678d5_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+docstring-to-markdown=0.15=pyhd8ed1ab_0
+entrypoints=0.4=pyhd8ed1ab_0
+exceptiongroup=1.2.0=py310h06a4308_0
+executing=0.8.3=pyhd3eb1b0_0
+fqdn=1.5.1=pyhd8ed1ab_0
+freetype=2.12.1=h267a509_2
+frozenlist=1.4.1=py310h2372a71_0
+gflags=2.2.2=he1b5a44_1004
+gitdb=4.0.11=pyhd8ed1ab_0
+gitpython=3.1.43=pyhd8ed1ab_0
+glog=0.7.1=hbabe93e_0
+google-ai-generativelanguage=0.6.4=pyhd8ed1ab_0
+google-api-core=2.19.0=pyhd8ed1ab_0
+google-api-python-client=2.133.0=pyhd8ed1ab_0
+google-auth=2.30.0=pyhff2d567_0
+google-auth-httplib2=0.2.0=pyhd8ed1ab_0
+google-generativeai=0.5.4=pyhd8ed1ab_0
+googleapis-common-protos=1.63.1=pyhd8ed1ab_0
+greenlet=1.1.2=py310hd8f1fbe_2
+grpc-cpp=1.46.3=h0b91f02_1
+grpcio=1.46.3=py310h6d4e5be_1
+gtest=1.14.0=hdb19cb5_1
+h11=0.14.0=pyhd8ed1ab_0
+h2=4.1.0=pyhd8ed1ab_0
+hpack=4.0.0=pyh9f0ad1d_0
+httpcore=1.0.5=pyhd8ed1ab_0
+httplib2=0.22.0=pyhd8ed1ab_0
+httpx=0.27.0=pyhd8ed1ab_0
+hyperframe=6.0.1=pyhd8ed1ab_0
+icu=73.2=h59595ed_0
+idna=3.7=pyhd8ed1ab_0
+importlib-metadata=7.1.0=pyha770c72_0
+importlib_metadata=7.1.0=hd8ed1ab_0
+importlib_resources=6.4.0=pyhd8ed1ab_0
+ipykernel=6.29.4=pyh3099207_0
+ipython=8.25.0=py310h06a4308_0
+ipywidgets=8.1.3=pyhd8ed1ab_0
+isodate=0.6.1=pypi_0
+isoduration=20.11.0=pyhd8ed1ab_0
+jedi=0.19.1=pyhd8ed1ab_0
+jedi-language-server=0.41.4=pyhd8ed1ab_0
+jinja2=3.1.4=pyhd8ed1ab_0
+json5=0.9.25=pyhd8ed1ab_0
+jsonpatch=1.33=pyhd8ed1ab_0
+jsonpointer=3.0.0=py310hff52083_0
+jsonschema=4.22.0=pyhd8ed1ab_0
+jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+jsonschema-with-format-nongpl=4.22.0=pyhd8ed1ab_0
+jupyter-lsp=2.2.5=pyhd8ed1ab_0
+jupyter_client=8.6.2=pyhd8ed1ab_0
+jupyter_core=5.7.2=py310hff52083_0
+jupyter_events=0.10.0=pyhd8ed1ab_0
+jupyter_server=2.14.1=pyhd8ed1ab_0
+jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
+jupyterlab=4.2.2=pyhd8ed1ab_0
+jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
+jupyterlab_server=2.27.2=pyhd8ed1ab_0
+jupyterlab_vim=4.1.3=pyhd8ed1ab_0
+jupyterlab_widgets=3.0.11=pyhd8ed1ab_0
+keyutils=1.6.1=h166bdaf_0
+krb5=1.21.2=h659d440_0
+langchain=0.2.5=pyhd8ed1ab_0
+langchain-community=0.2.5=pyhd8ed1ab_0
+langchain-core=0.2.9=pyhd8ed1ab_0
+langchain-google-genai=1.0.6=pyhd8ed1ab_0
+langchain-text-splitters=0.2.1=pyhd8ed1ab_0
+langsmith=0.1.77=pyhd8ed1ab_0
+lcms2=2.16=hb7c19ff_0
+ld_impl_linux-64=2.38=h1181459_1
+lerc=4.0.0=h27087fc_0
+libabseil=20211102.0=cxx17_h48a1fff_3
+libblas=3.9.0=22_linux64_openblas
+libboost=1.85.0=hba137d9_1
+libboost-devel=1.85.0=h00ab1b0_1
+libboost-headers=1.85.0=ha770c72_1
+libbrotlicommon=1.0.9=h166bdaf_9
+libbrotlidec=1.0.9=h166bdaf_9
+libbrotlienc=1.0.9=h166bdaf_9
+libcblas=3.9.0=22_linux64_openblas
+libcurl=8.8.0=hca28451_0
+libdeflate=1.20=hd590300_0
+libedit=3.1.20191231=he28a2e2_2
+libev=4.33=hd590300_2
+libevent=2.1.10=h28343ad_4
+libffi=3.4.4=h6a678d5_1
+libgcc-ng=13.2.0=h77fa898_10
+libgfortran-ng=13.2.0=h69a702a_10
+libgfortran5=13.2.0=h3d2ce59_10
+libgomp=13.2.0=h77fa898_10
+libjpeg-turbo=3.0.0=hd590300_1
+liblapack=3.9.0=22_linux64_openblas
+libnghttp2=1.58.0=h47da74e_1
+libopenblas=0.3.27=pthreads_h413a1c8_0
+libpng=1.6.43=h2797004_0
+libprotobuf=3.20.3=he621ea3_0
+libsodium=1.0.18=h36c2ea0_1
+libssh2=1.11.0=h0841786_0
+libstdcxx-ng=13.2.0=hc0a3c3a_10
+libthrift=0.15.0=h362ad58_1
+libtiff=4.6.0=h1dd3fc0_3
+libuuid=1.41.5=h5eee18b_0
+libwebp-base=1.4.0=hd590300_0
+libxcb=1.15=h0b41bf4_0
+libzlib=1.2.13=h4ab18f5_6
+lsprotocol=2023.0.1=pyhd8ed1ab_0
+lz4-c=1.9.4=hcb278e6_0
+markdown-it-py=3.0.0=pyhd8ed1ab_0
+markupsafe=2.1.5=py310h2372a71_0
+marshmallow=3.21.3=pyhd8ed1ab_0
+matplotlib-inline=0.1.6=py310h06a4308_0
+mdurl=0.1.2=pyhd8ed1ab_0
+mistune=3.0.2=pyhd8ed1ab_0
+multidict=6.0.5=py310h2372a71_0
+mypy_extensions=1.0.0=pyha770c72_0
+nb_conda_kernels=2.5.1=pyh707e725_2
+nbclient=0.10.0=pyhd8ed1ab_0
+nbconvert-core=7.16.4=pyhd8ed1ab_1
+nbformat=5.10.4=pyhd8ed1ab_0
+ncurses=6.4=h6a678d5_0
+neo4j-python-driver=5.21.0=pyhd8ed1ab_0
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+networkx=3.3=pypi_0
+notebook=7.2.1=pyhd8ed1ab_0
+notebook-shim=0.2.4=pyhd8ed1ab_0
+numpy=1.26.4=py310hb13e2d6_0
+openjpeg=2.5.2=h488ebb8_0
+openssl=3.3.1=h4ab18f5_0
+orc=1.7.4=hb3bc3d3_1
+orjson=3.10.4=py310he421c4c_0
+overrides=7.7.0=pyhd8ed1ab_0
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.2.2=py310hf9f9076_1
+pandocfilters=1.5.0=pyhd8ed1ab_0
+parso=0.8.3=pyhd3eb1b0_0
+pathspec=0.10.3=py310h06a4308_0
+pexpect=4.8.0=pyhd3eb1b0_3
+pillow=10.3.0=py310hf73ecf8_0
+pip=24.0=py310h06a4308_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+platformdirs=4.2.2=pyhd8ed1ab_0
+polars=0.20.31=py310h031f9ce_0
+prometheus_client=0.20.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.43=py310h06a4308_0
+prompt_toolkit=3.0.43=hd3eb1b0_0
+proto-plus=1.23.0=pyhd8ed1ab_0
+protobuf=3.20.3=py310h6a678d5_0
+psutil=5.9.8=py310h2372a71_0
+pthread-stubs=0.4=h36c2ea0_1001
+ptyprocess=0.7.0=pyhd3eb1b0_2
+pure_eval=0.2.2=pyhd3eb1b0_0
+pyarrow=8.0.0=py310h468efa6_0
+pyasn1=0.6.0=pyhd8ed1ab_0
+pyasn1-modules=0.4.0=pyhd8ed1ab_0
+pycparser=2.22=pyhd8ed1ab_0
+pydantic=2.7.4=pyhd8ed1ab_0
+pydantic-core=2.18.4=py310he421c4c_0
+pydeck=0.8.0=pyhd8ed1ab_0
+pygls=1.3.1=pyhd8ed1ab_0
+pygments=2.15.1=py310h06a4308_1
+pyopenssl=24.0.0=pyhd8ed1ab_0
+pyparsing=3.1.2=pyhd8ed1ab_0
+pysocks=1.7.1=pyha2e5f31_6
+python=3.10.14=h955ad1f_1
+python-dateutil=2.9.0=pyhd8ed1ab_0
+python-dotenv=1.0.1=pyhd8ed1ab_0
+python-fastjsonschema=2.20.0=pyhd8ed1ab_0
+python-json-logger=2.0.7=pyhd8ed1ab_0
+python-tzdata=2024.1=pyhd8ed1ab_0
+python_abi=3.10=2_cp310
+pytz=2024.1=pyhd8ed1ab_0
+pyu2f=0.1.5=pyhd8ed1ab_0
+pyyaml=6.0.1=py310h2372a71_1
+pyzmq=25.1.2=py310h6a678d5_0
+rdflib=7.0.0=pypi_0
+re2=2022.04.01=h27087fc_0
+readline=8.2=h5eee18b_0
+referencing=0.35.1=pyhd8ed1ab_0
+requests=2.32.3=pyhd8ed1ab_0
+rfc3339-validator=0.1.4=pyhd8ed1ab_0
+rfc3986-validator=0.1.1=pyh9f0ad1d_0
+rich=13.7.1=pyhd8ed1ab_0
+rpds-py=0.18.1=py310he421c4c_0
+rsa=4.9=pyhd8ed1ab_0
+send2trash=1.8.3=pyh0d859eb_0
+setuptools=69.5.1=py310h06a4308_0
+six=1.16.0=pyhd3eb1b0_1
+smmap=5.0.0=pyhd8ed1ab_0
+snappy=1.2.0=hdb0a2a9_1
+sniffio=1.3.1=pyhd8ed1ab_0
+soupsieve=2.5=pyhd8ed1ab_1
+sqlalchemy=2.0.30=py310hc51659f_0
+sqlite=3.45.3=h5eee18b_0
+stack_data=0.2.0=pyhd3eb1b0_0
+streamlit=1.35.0=pyhd8ed1ab_0
+tenacity=8.3.0=pyhd8ed1ab_0
+terminado=0.18.1=pyh0d859eb_0
+tinycss2=1.3.0=pyhd8ed1ab_0
+tk=8.6.14=h39e8969_0
+toml=0.10.2=pyhd8ed1ab_0
+tomli=2.0.1=pyhd8ed1ab_0
+toolz=0.12.1=pyhd8ed1ab_0
+tornado=6.4.1=py310hc51659f_0
+tqdm=4.66.4=pyhd8ed1ab_0
+traitlets=5.14.3=py310h06a4308_0
+types-python-dateutil=2.9.0.20240316=pyhd8ed1ab_0
+typing-extensions=4.11.0=py310h06a4308_0
+typing_extensions=4.11.0=py310h06a4308_0
+typing_inspect=0.9.0=pyhd8ed1ab_0
+typing_utils=0.1.0=pyhd8ed1ab_0
+tzdata=2024a=h04d1e81_0
+tzlocal=5.2=py310hff52083_0
+uri-template=1.3.0=pyhd8ed1ab_0
+uritemplate=4.1.1=pyhd8ed1ab_0
+urllib3=2.2.1=pyhd8ed1ab_0
+utf8proc=2.6.1=h5eee18b_1
+validators=0.28.3=pyhd8ed1ab_0
+watchdog=4.0.1=py310hff52083_0
+wcwidth=0.2.5=pyhd3eb1b0_0
+webcolors=24.6.0=pyhd8ed1ab_0
+webencodings=0.5.1=pyhd8ed1ab_2
+websocket-client=1.8.0=pyhd8ed1ab_0
+wheel=0.43.0=py310h06a4308_0
+widgetsnbextension=4.0.11=pyhd8ed1ab_0
+xorg-libxau=1.0.11=hd590300_0
+xorg-libxdmcp=1.1.3=h7f98852_0
+xz=5.4.6=h5eee18b_1
+yaml=0.2.5=h7f98852_2
+yarl=1.9.4=py310h2372a71_0
+zeromq=4.3.5=h6a678d5_0
+zipp=3.19.2=pyhd8ed1ab_0
+zlib=1.2.13=h4ab18f5_6
+zstd=1.5.6=ha6fb4c9_0
